[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainWindow/AuthDialog/AuthDialog.gd" type="Script" id=1]

[node name="AuthDialog" type="WindowDialog"]
anchor_right = 0.292969
anchor_bottom = 0.358333
window_title = "Iniciar Sesi√≥n"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserLabel" type="Label" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 14.0
text = "Usuario:"
valign = 1

[node name="UserInput" type="LineEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 280.0
margin_bottom = 42.0
focus_neighbour_bottom = NodePath("../PasswordInput")

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 280.0
margin_bottom = 60.0
text = "oAuth token:"
valign = 1

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 280.0
margin_bottom = 88.0
focus_neighbour_top = NodePath("../UserInput")
focus_neighbour_bottom = NodePath("../CanalInput")
secret = true

[node name="CanalLabel" type="Label" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 280.0
margin_bottom = 106.0
text = "Canal:"
valign = 1

[node name="CanalInput" type="LineEdit" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 280.0
margin_bottom = 134.0
focus_neighbour_top = NodePath("../PasswordInput")
focus_neighbour_bottom = NodePath("../ConnectButton")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 280.0
margin_bottom = 142.0

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 280.0
margin_bottom = 166.0
focus_neighbour_top = NodePath("../CanalInput")
text = "Conectar"

[node name="SaveDataToggle" type="CheckBox" parent="VBoxContainer"]
margin_left = 163.0
margin_top = 170.0
margin_right = 280.0
margin_bottom = 194.0
size_flags_horizontal = 8
pressed = true
text = "Guardar datos"

[connection signal="about_to_show" from="." to="." method="_on_AuthDialog_about_to_show"]
[connection signal="button_up" from="VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_button_up"]
